fix sort buttone align on search page

--- a/themes/jeo-theme/assets/scss/5-pages/_p-search.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-search.scss
@@ -111,6 +111,7 @@
                 line-height: 20px;
                 margin-left: 5px;
                 position: relative;
+                margin-top:-2px;
 
                 &:after {
                     position: absolute;
